--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.8.0",
-    "axios": "0.21.1",
-    "bootstrap": "^5.1.3",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.2.0",
     "react": "^18.0.0",
-    "react-bootstrap": "^2.3.0",
+    "react-bootstrap": "^2.5.0",
     "react-cookie": "4.0.3",
     "react-cookies": "0.1.1",
     "react-dom": "^18.0.0",
@@ -40,5 +40,18 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This repository has starter code to begin work on creating your own online bookshelf.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/omarali1997/can-of-books-frontend.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/omarali1997/can-of-books-frontend/issues"
+  },
+  "homepage": "https://github.com/omarali1997/can-of-books-frontend#readme"
 }
