--- a/package.json
+++ b/package.json
@@ -53,5 +53,5 @@
   "bugs": {
     "url": "https://github.com/omarali1997/can-of-books-frontend/issues"
   },
-  "homepage": "https://github.com/omarali1997/can-of-books-frontend#readme"
+  "homepage": ""
 }
