--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.10.2",
     "@testing-library/jest-dom": "5.11.9",
     "@testing-library/react": "11.2.5",
     "@testing-library/user-event": "12.8.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.2.0",
+    "dotenv": "^16.0.2",
     "react": "^18.0.0",
     "react-bootstrap": "^2.5.0",
     "react-cookie": "4.0.3",
